# static-mbed-os

./: CMakeLists.txt  Makefile  mbed_app.json
cmake/: Config.cmake.in  FindStaticMbedOS.cmake  FindStaticMbedOSInternal.cmake  StaticMbedOSToolchain.cmake  StaticMbedOSToolchain.cmake.in  StaticMbedOSTransformers.cmake  UseStaticMbedOS.cmake  UseStaticMbedOS.cmake.in
pack-core/: CMakeLists.txt  Makefile
